# 5ireChain-Multisig

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  README.md  commitlint.config.js
.github/: CODEOWNERS  actionlint.yml  dependabot.yml
.github/workflows/: base-image-builder.yml  ci.yml  esg-builder.yml  sec-audit.yml
chains/testnet/: 5fire.json  customSpec5ire.json
esg_oracle/: Cargo.toml  Dockerfile  README.md
esg_oracle/src/: main.rs  oracle.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  lib.rs  rpc.rs  service.rs  testnet_fixtures.rs
pallets/esg_fetcher/: Cargo.toml  README.md
pallets/esg_fetcher/src/: lib.rs  tests.rs
pallets/evm-transfer/: Cargo.toml  README.md
pallets/evm-transfer/src/: lib.rs  mock.rs  tests.rs
pallets/name-service/: Cargo.toml
pallets/name-service/src/: lib.rs  mock.rs  tests.rs
pallets/nft/: Cargo.toml  README.md
pallets/nft-features/: Cargo.toml
pallets/nft-features/src/: lib.rs  mock.rs  tests.rs
pallets/nft/src/: lib.rs  mock.rs  tests.rs
pallets/staking/: Cargo.toml
pallets/staking/reward-curve/: Cargo.toml
pallets/staking/reward-fn/: Cargo.toml
pallets/staking/src/: lib.rs  mock.rs  tests.rs
pallets/staking/src/pallet/: impls.rs  mod.rs
pallets/template/: Cargo.toml  README.md
pallets/template/src/: lib.rs
pallets/vesting/: Cargo.toml  README.md
pallets/vesting/src/: lib.rs  mock.rs  tests.rs
runtime/5ire/: Cargo.toml
runtime/5ire/src/: constants.rs  lib.rs  precompiles.rs
runtime/common/: Cargo.toml
runtime/common/src/: elections.rs  lib.rs
scripts/: build_clean_dev.sh  build_runtime.sh  build_spec_genesis_fire_testnet.sh  build_spec_genesis_local_test.sh  init.sh  run_validator1.sh  run_validator2.sh  run_validator3.sh  run_validator4.sh  run_validator5.sh  run_validator6.sh  run_validator7.sh  run_validator8.sh
scripts/session_keys/: audi1  audi2  audi3  audi4  audi5  audi6  audi7  audi8  audi9  aura1  aura2  aura3  aura4  aura5  aura6  aura7  aura8  aura9  gran1  gran2  gran3  gran4  gran5  gran6  gran7  gran8  gran9  imol1  imol2  imol3  imol4  imol5  imol6  imol7  imol8  imol9  run.sh
tests/contracts/Calculator/: README.md  abi.json  bytecode.txt
tests/contracts/HelloWorld/: HelloWorld.sol  README.md  abi.json  bytecode.txt  index.js
tests/contracts/test-js/: ERC20Bytecode.json  ERC20Token.json  ERC20Token.sol  HelloWorld.json  README.md  balance.js  compile.js  deploy.js  hello-world.ts  package.json  tsconfig.json
