[package]
authors = ['Laurens Kubat <Laurens@5ire.com>']
description = 'An offchain worker for fetching esg data from the 5ire esg oracle'
edition = '2021'
homepage = 'https://5ire.org'
#TODO add License
name = 'esg-fetcher'
publish = false
repository = 'https://github.com/5ire-org/5ireChain'
version = '1.0.0-monthly-2021-12'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
version = '1.0'
default-features = false
features = ["derive", "alloc"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]

[dependencies.scale-info]
default-features = false
version = '1.0'
features = ["derive"]

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.3'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-11'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.parking_lot]
default-features = false
version = "0.11.2"

[dependencies.sp-keystore]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
version = "0.10.0-dev"
tag = 'monthly-2021-11'

[dependencies.log]
version = "0.4"



[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    "scale-info/std",
	  "sp-core/std",
	  "sp-io/std",
	  "sp-runtime/std",
	  "sp-keystore/std",
	  "sp-std/std",

]
try-runtime = ['frame-support/try-runtime']