[package]
authors = ['5ire Developer']
description = 'EVM transfer'
edition = '2018'
homepage = ''
license = 'Unlicense'
name = 'evm-transfer'
publish = false
repository = ''
version = '1.0.0'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies.scale-info]
version = '1.0'
default-features = false
features = ["derive"]

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'


[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.3.1'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-11'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11'


[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/5ire-org/frontier.git'
branch= "5ire-11"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "pallet-evm/std"
]
try-runtime = ['frame-support/try-runtime']