[package]
authors = ['5ire Developer']
description = 'NFT features to mint, transfer, ... NFT in 5ireChain'
edition = '2018'
license = 'Unlicense'
name = 'nft-features'
repository = 'https://github.com/5ire-org/5ireChain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
version = '1.0.132'
#optional = true
default-features = false
features = ["derive", "alloc"]

[dependencies.scale-info]
version = '1.0'
default-features = false
features = ["derive"]

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11' 

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11' 

[dev-dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11' 

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11' 

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11' 

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.3.1'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-11' 

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11' 

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11' 


[dev-dependencies.node-primitives]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-11' 

[dependencies.pallet-nft]
default-features = false
path = '../nft'
version = '1.0.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'serde/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'scale-info/std',
    'pallet-nft/std',
    'sp-std/std',
    'sp-runtime/std',
]
try-runtime = ['frame-support/try-runtime']