[package]
name = "pallet-nft"
description = "Non-fungible token pallet provides basic functions to create and manager NFT"
repository = ""
license = "Apache-2.0"
version = "1.0.0"
authors = ["5ire Developers"]
edition = "2018"

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, default-features = false }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"] }
sp-std = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' , default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' , default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' , default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11'  }
sp-core = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11'  }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]