[package]
name = "pallet-staking"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
#import our own esg score
esg-fetcher = {default-features = false,  path = "../esg_fetcher"}
serde = { default-features = false, version = "1.0.126", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }
sp-staking = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate"}
pallet-session = { tag = 'monthly-2021-11', default-features = false, features = [
	"historical",
], git = "https://github.com/paritytech/substrate" }
pallet-authorship = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }
sp-application-crypto = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }
frame-election-provider-support = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }
log = { version = "0.4.14", default-features = false }
sp-arithmetic= { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate" }

# Optional imports for benchmarking
frame-benchmarking = { tag = 'monthly-2021-11', default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
rand_chacha = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
sp-tracing = { tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate" }
sp-core = { tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate" }
sp-npos-elections = { tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate" }
pallet-balances = { tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate"}
pallet-staking-reward-curve = { tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate" }
pallet-bags-list = { tag = 'monthly-2021-11', features = ["runtime-benchmarks"], git = "https://github.com/paritytech/substrate" }
substrate-test-utils = { tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate" }
frame-benchmarking = { tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate" }
frame-election-provider-support = {tag = 'monthly-2021-11', git = "https://github.com/paritytech/substrate" }
rand_chacha = { version = "0.3" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
	"sp-arithmetic/std",
	"esg-fetcher/std"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]