[package]
name = "pallet-vesting"
description = "Provides scheduled balance locking mechanism, in a *graded vesting* way."
repository = ""
license = "Apache-2.0"
version = "1.0.0"
authors = ["5ire Technology Team"]
edition = "2018"

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, default-features = false }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-11", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-11", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-11", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' , default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-11" }
pallet-balances = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-11" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
