[package]
name = "fire-runtime-common"
version = "1.0.0"
authors = ["5ire Developer"]
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.0"
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
log = { version = "0.4.13", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"


node-primitives = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }

pallet-authorship = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-staking = { path = "../../pallets/staking" ,default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false, optional = true }
pallet-aura = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11', default-features = false }

libsecp256k1 = { version = "0.7.0", default-features = false }


[dev-dependencies]
hex-literal = "0.3.3"
frame-support-test = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' }
pallet-aura = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' }
pallet-treasury = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' }
sp-keystore = { git = "https://github.com/paritytech/substrate", tag = 'monthly-2021-11' }
serde_json = {version = "1.0.67", default-features = false, features = ["alloc"]}
libsecp256k1 = "0.7.0"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"rustc-hex/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-election-provider-multi-phase/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"frame-system/std",
	"libsecp256k1/std",
	"sp-npos-elections/std",
	"pallet-bags-list/std"
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"libsecp256k1/static-context",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
