[package]
name = "pallet-staking-reward-fn"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Reward function for FRAME staking pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]

[dependencies]
sp-arithmetic = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11' }
log = { version = "0.4.14", default-features = false }

[features]
default = ["std"]
std = [
	"sp-arithmetic/std",
	"log/std",
]
